@@ -1,4 +1,5 @@
 0.12.31 June xx, 2023
+- when ebookmaker transforms `a[name]` attributes into `id` attributes, whitespace or non-alphanumeric characters in the name result in invalid identifiers. These are dropped in the transformation to EPUB. Code has been added to transform these name attributes into valid xml identifiers. Fixes #173
 - A new ebookmaker-specific class, `x-ebookmaker-notoc` has been added to help html authors control which headings are added to the table of contents. The `h2` element in the boilerplate header resulted in funny-looking TOCs. The `x-ebookmaker-notoc` class prevents the boilerplate header from being added to the TOC. fixes #117
 - CSS for the boilerplate headeer has been tweaked to better protect its format from the document CSS, and to better match the fomatting used by the workflow tool.
 - Ebookmaker's parser no longer crashes when fed a document with SCRIPT elements containing bare "&" characters. Script elements are still removed. This was a problem exhibited when trying to convert HTML from PG Australia.
